--- a/banned-user.html
+++ b/banned-user.html
@@ -138,19 +138,19 @@
                 <ul class="flex flex-col w-full pb-10 text-gray-700 dark:text-gray-300">
                   <li>
                     <a class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
-                      href="/">Demo Mode</a>
+                      href="#">Demo Mode</a>
                   </li>
                   <li>
                     <a class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
-                      href="/">API Integration</a>
+                      href="#">API Integration</a>
                   </li>
                   <li>
                     <a class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
-                      href="/">Security</a>
+                      href="#">Security</a>
                   </li>
                   <li>
                     <a class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
-                      href="/">Bugs</a>
+                      href="#">Bugs</a>
                   </li>
                 </ul>
               </div>
@@ -321,7 +321,7 @@
               </ul>
               <ul class="py-1 text-gray-700 dark:text-gray-300" aria-labelledby="dropdown">
                 <li>
-                  <a href="#"
+                  <a href="/login.html"
                     class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white">Sign
                     out</a>
                 </li>
@@ -506,6 +506,11 @@
                 </button>
                 <ul id="dropdown-customer" class="hidden py-2 space-y-2">
                   <li>
+                    <a href="#"
+                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Live
+                      Chat</a>
+                  </li>
+                  <li>
                     <a href="/inbox.html"
                       class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Inbox</a>
                   </li>
@@ -605,8 +610,6 @@
           </div>
         </div>
       </aside>
-
-
       <!-- User Banned Info Page -->
       <section class="p-4 md:ml-64 min-h-screen pt-20">
         <div class="flex flex-col bg-gray-50 dark:bg-dark100 rounded-lg min-h-screen">
