--- a/games.html
+++ b/games.html
@@ -137,19 +137,19 @@
                                 <ul class="flex flex-col w-full pb-10 text-gray-700 dark:text-gray-300">
                                     <li>
                                         <a class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
-                                            href="/">Demo Mode</a>
+                                            href="#">Demo Mode</a>
                                     </li>
                                     <li>
                                         <a class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
-                                            href="/">API Integration</a>
+                                            href="#">API Integration</a>
                                     </li>
                                     <li>
                                         <a class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
-                                            href="/">Security</a>
+                                            href="#">Security</a>
                                     </li>
                                     <li>
                                         <a class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
-                                            href="/">Bugs</a>
+                                            href="#">Bugs</a>
                                     </li>
                                 </ul>
                             </div>
@@ -324,7 +324,7 @@
                             </ul>
                             <ul class="py-1 text-gray-700 dark:text-gray-300" aria-labelledby="dropdown">
                                 <li>
-                                    <a href="#"
+                                    <a href="/login.html"
                                         class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white">Sign
                                         out</a>
                                 </li>
@@ -510,6 +510,11 @@
                                     </svg>
                                 </button>
                                 <ul id="dropdown-customer" class="hidden py-2 space-y-2">
+                                    <li>
+                                        <a href="#"
+                                            class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Live
+                                            Chat</a>
+                                    </li>
                                     <li>
                                         <a href="/inbox.html"
                                             class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Inbox</a>
@@ -1186,7 +1191,7 @@
                                         </div>
                                         <input type="search" id="default-search"
                                             class="block w-full p-4 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-primary focus:border-primary"
-                                            placeholder="Enter user id or game id\..." required />
+                                            placeholder="Enter user id or game id..." required />
                                         <button type="submit"
                                             class="text-white absolute end-2.5 bottom-2.5 bg-primary focus:outline-none font-medium rounded-lg text-sm px-4 py-2">
                                             Search
@@ -1303,7 +1308,7 @@
         const fishGames = [
             {
                 gameId: "SG98001",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG111020",
                 betAmount: 50,
                 winAmount: 100,
@@ -1312,16 +1317,16 @@
             },
             {
                 gameId: "SG98002",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG711020",
                 betAmount: 75,
                 winAmount: 150,
                 dateTime: "2024-06-15, 12:30:57 pm",
-                status: "unpaid",
+                status: "paid",
             },
             {
                 gameId: "SG98003",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG111020",
                 betAmount: 100,
                 winAmount: 200,
@@ -1330,16 +1335,16 @@
             },
             {
                 gameId: "SG98004",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG411020",
                 betAmount: 20,
                 winAmount: 40,
                 dateTime: "2024-06-15, 12:30:57 pm",
-                status: "unpaid",
+                status: "paid",
             },
             {
                 gameId: "SG98005",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG311020",
                 betAmount: 50,
                 winAmount: 100,
@@ -1348,7 +1353,7 @@
             },
             {
                 gameId: "SG98006",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG611020",
                 betAmount: 30,
                 winAmount: 60,
@@ -1357,7 +1362,7 @@
             },
             {
                 gameId: "SG98007",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG911020",
                 betAmount: 40,
                 winAmount: 80,
@@ -1366,16 +1371,16 @@
             },
             {
                 gameId: "SG98008",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG111020",
                 betAmount: 25,
                 winAmount: 50,
                 dateTime: "2024-06-15, 12:30:57 pm",
-                status: "unpaid",
+                status: "paid",
             },
             {
                 gameId: "SG98009",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG411020",
                 betAmount: 60,
                 winAmount: 120,
@@ -1384,7 +1389,7 @@
             },
             {
                 gameId: "SG98010",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG711020",
                 betAmount: 80,
                 winAmount: 160,
@@ -1396,7 +1401,7 @@
             switch (status) {
                 case 'paid':
                     return 'bg-green-100 text-green-80 dark:bg-green-900 dark:text-green-300';
-                case 'unpaid':
+                case 'paid':
                     return 'bg-red-100 text-red-800 dark:bg-red-900 dark:text-red-300';
                 default:
                     return 'bg-blue-100 text-blue-800 dark:bg-blue-900 dark:text-blue-300'
@@ -1420,8 +1425,8 @@
             <td class="px-6 py-4 text-gray-900 dark:text-white">${game.betAmount}</td>
             <td class="px-6 py-4 text-gray-900 dark:text-white">${game.winAmount}</td>
             <td class="px-6 py-4 text-gray-900 dark:text-white">${game.dateTime}</td>
-                <td class="px-6 py-4 text-gray-900 dark:text-white"></td>
-          </tr>
+<td class="px-6 py-4 text-gray-900 dark:text-white"><span class="text-sm me-2 px-2.5 py-0.5 rounded ${getStatusClass(game.status)}">${game.status}</span>
+          </td          </tr>
   
         `
             )
@@ -1431,7 +1436,7 @@
         const spinGames = [
             {
                 gameId: "SG98001",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG111020",
                 betAmount: 50,
                 winAmount: 100,
@@ -1440,16 +1445,16 @@
             },
             {
                 gameId: "SG98002",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG711020",
                 betAmount: 75,
                 winAmount: 150,
                 dateTime: "2024-06-15, 12:30:57 pm",
-                status: "unpaid",
+                status: "paid",
             },
             {
                 gameId: "SG98003",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG111020",
                 betAmount: 100,
                 winAmount: 200,
@@ -1458,16 +1463,16 @@
             },
             {
                 gameId: "SG98004",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG411020",
                 betAmount: 20,
                 winAmount: 40,
                 dateTime: "2024-06-15, 12:30:57 pm",
-                status: "unpaid",
+                status: "paid",
             },
             {
                 gameId: "SG98005",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG311020",
                 betAmount: 50,
                 winAmount: 100,
@@ -1476,7 +1481,7 @@
             },
             {
                 gameId: "SG98006",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG611020",
                 betAmount: 30,
                 winAmount: 60,
@@ -1485,7 +1490,7 @@
             },
             {
                 gameId: "SG98007",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG911020",
                 betAmount: 40,
                 winAmount: 80,
@@ -1494,16 +1499,16 @@
             },
             {
                 gameId: "SG98008",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG111020",
                 betAmount: 25,
                 winAmount: 50,
                 dateTime: "2024-06-15, 12:30:57 pm",
-                status: "unpaid",
+                status: "paid",
             },
             {
                 gameId: "SG98009",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG411020",
                 betAmount: 60,
                 winAmount: 120,
@@ -1512,7 +1517,7 @@
             },
             {
                 gameId: "SG98010",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG711020",
                 betAmount: 80,
                 winAmount: 160,
@@ -1537,8 +1542,7 @@
             <td class="px-6 py-4 text-gray-900 dark:text-white">${game.betAmount}</td>
             <td class="px-6 py-4 text-gray-900 dark:text-white">${game.winAmount}</td>
             <td class="px-6 py-4 text-gray-900 dark:text-white">${game.dateTime}</td>
-            <td class="px-6 py-4 text-gray-900 dark:text-white"></td>
-            <!-- <td class="px-6 py-4 text-gray-900 dark:text-white"><span class="text-sm me-2 px-2.5 py-0.5 rounded ${getStatusClass(game.status)}">${game.status}</span> -->
+            <td class="px-6 py-4 text-gray-900 dark:text-white"><span class="text-sm me-2 px-2.5 py-0.5 rounded ${getStatusClass(game.status)}">${game.status}</span>
           </td
           </tr>
   
@@ -1670,7 +1674,7 @@
         const soccerGames = [
             {
                 gameId: "SG98001",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG111020",
                 betAmount: 50,
                 winAmount: 100,
@@ -1679,7 +1683,7 @@
             },
             {
                 gameId: "SG98002",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG711020",
                 betAmount: 75,
                 winAmount: 150,
@@ -1688,7 +1692,7 @@
             },
             {
                 gameId: "SG98003",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG111020",
                 betAmount: 100,
                 winAmount: 200,
@@ -1697,7 +1701,7 @@
             },
             {
                 gameId: "SG98004",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG411020",
                 betAmount: 20,
                 winAmount: 40,
@@ -1706,7 +1710,7 @@
             },
             {
                 gameId: "SG98005",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG311020",
                 betAmount: 50,
                 winAmount: 100,
@@ -1715,7 +1719,7 @@
             },
             {
                 gameId: "SG98006",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG611020",
                 betAmount: 30,
                 winAmount: 60,
@@ -1724,7 +1728,7 @@
             },
             {
                 gameId: "SG98007",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG911020",
                 betAmount: 40,
                 winAmount: 80,
@@ -1733,7 +1737,7 @@
             },
             {
                 gameId: "SG98008",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG111020",
                 betAmount: 25,
                 winAmount: 50,
@@ -1742,7 +1746,7 @@
             },
             {
                 gameId: "SG98009",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG411020",
                 betAmount: 60,
                 winAmount: 120,
@@ -1751,7 +1755,7 @@
             },
             {
                 gameId: "SG98010",
-                userId: ["PG111001", "PG11002", "PG1105", "PG20203"],
+                userId: ["PG111001"],
                 winner: "PG711020",
                 betAmount: 80,
                 winAmount: 160,
