--- a/analytics.html
+++ b/analytics.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="https://res.cloudinary.com/dyvmtgjer/image/upload/v1717864716/pnl-logo_at49qu.png"
         type="image/x-icon" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/3.3.2/tailwind.min.css" rel="stylesheet" />
-    <!-- <link rel="stylesheet" href="style.css" /> -->
+    <link rel="stylesheet" href="style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.js"></script>
@@ -137,19 +137,19 @@
                                 <ul class="flex flex-col w-full pb-10 text-gray-700 dark:text-gray-300">
                                     <li>
                                         <a class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
-                                            href="/">Demo Mode</a>
+                                            href="#">Demo Mode</a>
                                     </li>
                                     <li>
                                         <a class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
-                                            href="/">API Integration</a>
+                                            href="#">API Integration</a>
                                     </li>
                                     <li>
                                         <a class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
-                                            href="/">Security</a>
+                                            href="#">Security</a>
                                     </li>
                                     <li>
                                         <a class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
-                                            href="/">Bugs</a>
+                                            href="#">Bugs</a>
                                     </li>
                                 </ul>
                             </div>
@@ -324,7 +324,7 @@
                             </ul>
                             <ul class="py-1 text-gray-700 dark:text-gray-300" aria-labelledby="dropdown">
                                 <li>
-                                    <a href="#"
+                                    <a href="/login.html"
                                         class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white">Sign
                                         out</a>
                                 </li>
@@ -333,6 +333,7 @@
                     </div>
                 </div>
             </nav>
+
             <!-- Sidebar -->
             <aside
                 class="fixed top-0 left-0 z-40 w-64 h-screen pt-14 transition-transform -translate-x-full bg-white border-r border-gray-200 md:translate-x-0 dark:bg-dark300 dark:border-dark100"
@@ -510,6 +511,11 @@
                                 </button>
                                 <ul id="dropdown-customer" class="hidden py-2 space-y-2">
                                     <li>
+                                        <a href="#"
+                                            class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Live
+                                            Chat</a>
+                                    </li>
+                                    <li>
                                         <a href="/inbox.html"
                                             class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Inbox</a>
                                     </li>
@@ -610,8 +616,6 @@
                     </div>
                 </div>
             </aside>
-
-
             <!-- Analytics Page -->
             <section class="p-4 md:ml-64 h-auto pt-20">
                 <div class="flex flex-col gap-4 bg-gray-50 dark:bg-dark100 rounded-lg min-h-screen">
