--- a/index.html
+++ b/index.html
@@ -645,7 +645,46 @@
                 </div>
               </div>
 
-              <div class="w-full bg-white rounded-lg dark:bg-dark200 p-4 md:p-6 h-48 lg:h-60">
+              <div class="flex flex-col bg-white dark:bg-dark200 p-4 rounded-lg">
+                <h3 class="leading-none text-sm lg:text-base font-medium text-gray-900 dark:text-white pb-4">
+                  Total Registered
+                </h3>
+                <div
+                  class="flex text-neutral-600 flex-col justify-center items-center relative rounded-xl overflow-hidden h-36 lg:h-40">
+                  <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg"
+                    class="absolute z-10 fill-[#1d4e89] duration-500">
+                    <path transform="translate(100 100)"
+                      d="M39.5,-49.6C54.8,-43.2,73.2,-36.5,78.2,-24.6C83.2,-12.7,74.8,4.4,69,22.5C63.3,40.6,60.2,59.6,49.1,64.8C38.1,70,19,61.5,0.6,60.7C-17.9,59.9,-35.9,67,-47.2,61.9C-58.6,56.7,-63.4,39.5,-70,22.1C-76.6,4.7,-84.9,-12.8,-81.9,-28.1C-79,-43.3,-64.6,-56.3,-49.1,-62.5C-33.6,-68.8,-16.8,-68.3,-2.3,-65.1C12.1,-61.9,24.2,-55.9,39.5,-49.6Z">
+                    </path>
+                  </svg>
+
+                  <div class="z-20 flex flex-col justify-center items-center p-4 rounded-full h-24 w-24 bg-black">
+                    <span class="text-white font-bold text-lg ml-2">7854</span>
+                    <p class="font-bold text-green-600 text-xs">+10%</p>
+                  </div>
+                </div>
+              </div>
+              <div class="flex flex-col bg-white dark:bg-dark200 p-4 rounded-lg">
+                <h3 class="leading-none text-sm lg:text-base font-medium text-gray-900 dark:text-white pb-4">
+                  Total Withdrawal
+                </h3>
+                <div
+                  class="flex text-neutral-600 flex-col justify-center items-center relative rounded-xl overflow-hidden h-36 lg:h-40">
+                  <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg"
+                    class="absolute z-10 fill-[#ab2346] duration-500">
+                    <path transform="translate(100 100)"
+                      d="M39.5,-49.6C54.8,-43.2,73.2,-36.5,78.2,-24.6C83.2,-12.7,74.8,4.4,69,22.5C63.3,40.6,60.2,59.6,49.1,64.8C38.1,70,19,61.5,0.6,60.7C-17.9,59.9,-35.9,67,-47.2,61.9C-58.6,56.7,-63.4,39.5,-70,22.1C-76.6,4.7,-84.9,-12.8,-81.9,-28.1C-79,-43.3,-64.6,-56.3,-49.1,-62.5C-33.6,-68.8,-16.8,-68.3,-2.3,-65.1C12.1,-61.9,24.2,-55.9,39.5,-49.6Z">
+                    </path>
+                  </svg>
+
+                  <div class="z-20 flex flex-col justify-center items-center p-4 rounded-full h-24 w-24 bg-black">
+                    <span class="text-white font-bold text-lg ml-2">4509</span>
+                    <p class="font-bold text-red-600 text-xs">-27%</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="hidden w-full bg-white rounded-lg dark:bg-dark200 p-4 md:p-6 h-48 lg:h-60">
                 <h3 class="leading-none text-sm lg:text-base font-medium text-gray-900 dark:text-white pb-2">
                   Total Registered
                 </h3>
@@ -674,7 +713,7 @@
               </div>
 
 
-              <div class="w-full bg-white rounded-lg dark:bg-dark200 p-4 md:p-6 h-48 lg:h-60">
+              <div class="hidden w-full bg-white rounded-lg dark:bg-dark200 p-4 md:p-6 h-48 lg:h-60">
                 <h3 class="leading-none text-sm lg:text-base font-medium text-gray-900 dark:text-white pb-2">
                   Total Withdrawal
                 </h3>
